--- a/.jshintrc
+++ b/.jshintrc
@@ -4,5 +4,6 @@
   "latedef" : true,  // true: Require variables/functions to be defined before being used
   "newcap"  : true,  // true: Require capitalization of all constructor functions e.g. `new F()`
   "indent"  : 2,     // {int} Number of spaces to use for indentation,
+  "laxbreak": true,  // false: Suppresses most of the warnings about possibly unsafe line breakings
   "globals" : {}
 }
