Add ClientDependency.config to .gitignore

--- a/samples/Website/.gitignore
+++ b/samples/Website/.gitignore
@@ -1,5 +1,6 @@
 /App_Data
-/App_Plugins/DisPlay.Umbraco.EmbeddedContent
+/App_Plugins/EmbeddedContent
+/Config/ClientDependency.config
 /media
 /umbraco
 /umbraco_client
