--- a/samples/Website/packages.config
+++ b/samples/Website/packages.config
@@ -41,5 +41,8 @@
   <package id="UmbracoCms" version="7.4.3" targetFramework="net452" />
   <package id="UmbracoCms.Core" version="7.4.3" targetFramework="net452" />
   <package id="UrlRewritingNet" version="2.0.7" targetFramework="net452" />
+  <package id="uSync" version="3.1.4.740" targetFramework="net452" />
+  <package id="uSync.ContentEdition" version="3.1.2.740" targetFramework="net452" />
+  <package id="uSync.Core" version="5.3.5.740" targetFramework="net452" />
   <package id="xmlrpcnet" version="2.5.0" targetFramework="net452" />
 </packages>
