--- a/src/DisPlay.Umbraco.EmbeddedContent/DisPlay.Umbraco.EmbeddedContent.csproj
+++ b/src/DisPlay.Umbraco.EmbeddedContent/DisPlay.Umbraco.EmbeddedContent.csproj
@@ -159,6 +159,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.SqlServerCe, Version=4.0.0.1, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
       <HintPath>..\..\packages\UmbracoCms.Core.7.4.3\lib\System.Data.SqlServerCe.dll</HintPath>
