--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "DisPlay.Umbraco.EmbeddedContent",
-  "version": "0.4.0-beta",
+  "version": "0.4.0",
   "umbracoPackage": {
     "umbracoVersion": "7.4.0",
     "name": "Embedded Content for Umbraco",
