--- a/.editorconfig
+++ b/.editorconfig
@@ -1,19 +1,18 @@
-# EditorConfig helps developers define and maintain consistent
-# coding styles between different editors and IDEs
-# editorconfig.org
-
 root = true
 
+# General settings for whole project
 [*]
 indent_style = space
-indent_size = 2
+indent_size = 4
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+# Format specific overrides
 [*.md]
 trim_trailing_whitespace = false
 
-[*.cs]
-indent_size = 4
+[*.{css,fsx,js,json,yml}]
+indent_style = space
+indent_size = 2
