--- a/src/DisPlay.Umbraco.EmbeddedContent.Web.UI/package.json
+++ b/src/DisPlay.Umbraco.EmbeddedContent.Web.UI/package.json
@@ -20,8 +20,11 @@
   },
   "scripts": {
     "lint:js": "eslint .",
-    "lint:style": "stylelint app/**/*.css",
-    "lint": "yarn run lint:js && yarn run lint:style",
+    "lint:style": "stylelint src/**/*.css",
+    "lint": "yarn run flow && yarn run lint:js && yarn run lint:style",
+    "fix:js": "eslint . --fix",
+    "fix:style": "stylelint src/**/*.css --fix",
+    "fix": "yarn fix:js && yarn fix:style",
     "clean": "rimraf build",
     "start": "nodemon --watch webpack.config.js --exec \"webpack-dev-server --env development --progress\"",
     "build": "yarn run clean && webpack --env production --progress",
@@ -30,37 +33,40 @@
   "devDependencies": {
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.3.1",
+    "babel-loader": "^7.1.1",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.1.8",
-    "case-sensitive-paths-webpack-plugin": "^1.1.4",
+    "caniuse-lite": "^1.0.30000701",
+    "case-sensitive-paths-webpack-plugin": "^2.1.1",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.26.1",
-    "eslint": "^3.15.0",
-    "eslint-config-standard": "^6.2.1",
+    "css-loader": "^0.28.4",
+    "eslint": "^4.2.0",
+    "eslint-config-standard": "^10.2.1",
     "eslint-loader": "^1.6.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.0",
     "eslint-plugin-promise": "^3.4.1",
-    "eslint-plugin-standard": "^2.0.1",
+    "eslint-plugin-standard": "^3.0.1",
     "extract-loader": "^0.1.0",
-    "extract-text-webpack-plugin": "beta",
-    "file-loader": "^0.10.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
     "html-loader": "^0.4.4",
     "ng-annotate-webpack-plugin": "^0.2.1-pre",
     "nodemon": "^1.11.0",
-    "postcss-cssnext": "^2.9.0",
-    "postcss-loader": "^1.3.0",
-    "postcss-smart-import": "^0.6.10",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-loader": "^2.0.6",
+    "postcss-smart-import": "^0.7.5",
     "rimraf": "^2.6.0",
     "string-replace-loader": "^1.0.5",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.18.2",
     "stylelint": "^7.8.0",
     "stylelint-config-standard": "^16.0.0",
-    "stylelint-webpack-plugin": "^0.6.0",
+    "stylelint-webpack-plugin": "^0.8.0",
     "url-loader": "^0.5.7",
-    "webpack": "^2.2.1",
+    "webpack": "^3.2.0",
     "webpack-dev-server": "^2.3.0"
   },
   "dependencies": {}
