--- a/src/DisPlay.Umbraco.EmbeddedContent/ClientApp/package.json
+++ b/src/DisPlay.Umbraco.EmbeddedContent/ClientApp/package.json
@@ -12,62 +12,56 @@
     "jquery": "jQuery",
     "underscore": "underscore"
   },
-  "browsers": [
-    "last 2 versions"
-  ],
   "engines": {
     "node": ">=6.0"
   },
   "scripts": {
     "lint:js": "eslint .",
-    "lint:style": "stylelint src/**/*.css",
-    "lint": "npm run flow && npm run lint:js && npm run lint:style",
+    "lint:style": "stylelint app/**/*.css",
+    "lint": "npm run lint:js && npm run lint:style",
     "fix:js": "eslint . --fix",
-    "fix:style": "stylelint src/**/*.css --fix",
-    "fix": "npm fix:js && npm fix:style",
-    "clean": "rimraf build",
-    "start": "nodemon --watch webpack.config.js --exec \"webpack-dev-server --env development --progress\"",
-    "build": "npm run clean && webpack --env production --progress",
-    "stats": "webpack --env production --profile --json > stats.json"
+    "fix:style": "stylelint app/**/*.css --fix",
+    "fix": "npm run fix:js && npm run fix:style",
+    "clean": "rimraf dist",
+    "start": "nodemon --watch webpack.config.babel.js --exec \"webpack-dev-server --config webpack.config.babel.js --env development --progress\"",
+    "build": "npm run clean && webpack --config webpack.config.babel.js --mode production --progress",
+    "stats": "webpack --config webpack.config.babel.js --mode production --json --profile > stats.json"
   },
   "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-class-properties": "^6.23.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.1.8",
-    "caniuse-lite": "^1.0.30000701",
-    "case-sensitive-paths-webpack-plugin": "^2.1.1",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.4",
-    "eslint": "^4.2.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-loader": "^1.6.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.0",
-    "eslint-plugin-promise": "^3.4.1",
-    "eslint-plugin-standard": "^3.0.1",
-    "extract-loader": "^0.1.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
-    "html-loader": "^0.4.4",
-    "ng-annotate-webpack-plugin": "^0.2.1-pre",
-    "nodemon": "^1.11.0",
-    "postcss-cssnext": "^3.0.2",
-    "postcss-loader": "^2.0.6",
-    "postcss-smart-import": "^0.7.5",
-    "rimraf": "^2.6.0",
-    "string-replace-loader": "^1.0.5",
-    "style-loader": "^0.18.2",
-    "stylelint": "^7.8.0",
-    "stylelint-config-standard": "^16.0.0",
-    "stylelint-webpack-plugin": "^0.8.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^3.2.0",
-    "webpack-dev-server": "^2.3.0"
-  },
-  "dependencies": {}
+    "@babel/cli": "^7.0.0-rc.2",
+    "@babel/core": "^7.0.0-rc.2",
+    "@babel/node": "^7.0.0-rc.2",
+    "@babel/polyfill": "^7.0.0-rc.2",
+    "@babel/preset-env": "^7.0.0-rc.2",
+    "@babel/register": "^7.0.0-rc.2",
+    "babel-eslint": "^8.2.6",
+    "babel-loader": "^8.0.0-beta.6",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "copy-webpack-plugin": "^4.5.2",
+    "css-loader": "^1.0.0",
+    "eslint": "^5.4.0",
+    "eslint-config-standard": "^12.0.0-alpha.0",
+    "eslint-loader": "^2.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "extract-loader": "^2.0.1",
+    "file-loader": "^2.0.0",
+    "html-loader": "^0.5.5",
+    "mini-css-extract-plugin": "^0.4.2",
+    "nodemon": "^1.18.3",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-smart-import": "^0.7.6",
+    "rimraf": "^2.6.2",
+    "style-loader": "^0.22.1",
+    "stylelint": "^9.5.0",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-webpack-plugin": "^0.10.5",
+    "url-loader": "^1.1.1",
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
+  }
 }
