--- a/samples/Website/uSync/data/Content/home/content.config
+++ b/samples/Website/uSync/data/Content/home/content.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <frontPage guid="9648c768-9f9a-411f-8958-95be79644818" id="1056" nodeName="Home" isDoc="" updated="2016-06-21T01:22:25.78Z" parentGUID="00000000-0000-0000-0000-000000000000" nodeTypeAlias="frontPage" templateAlias="FrontPage" sortOrder="0" published="true">
-  <ribbons><![CDATA[[
+  <blocks><![CDATA[[
   {
-    "contentTypeAlias": "JumbotronRibbon",
+    "contentTypeAlias": "JumbotronBlock",
     "createDate": "2016-06-20T20:51:43.5596022Z",
     "updateDate": "2016-06-20T23:20:10.9041995Z",
     "creatorId": 0,
@@ -17,5 +17,5 @@
       "headline": "Vestibulum aliquam posuere"
     }
   }
-]]]></ribbons>
+]]]></blocks>
 </frontPage>
