--- a/samples/Website/uSync/data/Content/home/faq/content.config
+++ b/samples/Website/uSync/data/Content/home/faq/content.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <articlePage guid="4e0d0b55-7acf-4876-8c1e-0b9d12949484" id="1069" nodeName="FAQ" isDoc="" updated="2016-06-20T22:59:56.003Z" parentGUID="9648c768-9f9a-411f-8958-95be79644818" nodeTypeAlias="articlePage" templateAlias="ArticlePage" sortOrder="0" published="true">
-  <ribbons><![CDATA[[
+  <blocks><![CDATA[[
   {
-    "contentTypeAlias": "faqRIbbon",
+    "contentTypeAlias": "faqBlock",
     "createDate": "2016-06-20T20:59:55.9653516Z",
     "updateDate": "2016-06-20T20:59:55.9728712Z",
     "creatorId": 0,
@@ -16,7 +16,7 @@
     }
   },
   {
-    "contentTypeAlias": "JumbotronRibbon",
+    "contentTypeAlias": "JumbotronBlock",
     "createDate": "2016-06-20T20:59:55.9728712Z",
     "updateDate": "2016-06-20T20:59:55.9788935Z",
     "creatorId": 0,
@@ -32,7 +32,7 @@
     }
   },
   {
-    "contentTypeAlias": "faqRIbbon",
+    "contentTypeAlias": "faqBlock",
     "createDate": "2016-06-20T20:59:55.9788935Z",
     "updateDate": "2016-06-20T20:59:55.9799084Z",
     "creatorId": 0,
@@ -45,6 +45,6 @@
       "items": "[{\"contentTypeAlias\":\"faqItem\",\"createDate\":\"2016-06-20T20:59:55.9799084Z\",\"updateDate\":\"2016-06-20T20:59:55.9799084Z\",\"creatorId\":0,\"writerId\":0,\"key\":\"713ed43f-4fb0-4a1d-8568-c8f78a6bf585\",\"name\":\"Parturient fames convallis vestibulum libero?\",\"published\":true,\"properties\":{\"question\":\"Parturient fames convallis vestibulum libero?\",\"answer\":\"Faucibus nam dapibus nostra vehicula fermentum nunc consectetur hendrerit a condimentum habitant habitasse cum sem faucibus porta semper mollis sodales a pharetra a. Ullamcorper taciti in et magna condimentum cum vitae ante odio justo accumsan massa bibendum sodales condimentum. A diam non mi habitant fermentum lacinia scelerisque volutpat scelerisque tortor eu a faucibus a. A torquent consectetur nunc aptent montes risus urna parturient lobortis mi a a tincidunt hendrerit aenean praesent sit quis metus ut a himenaeos parturient montes a in. Iaculis tortor cum pretium convallis tempor praesent suspendisse senectus risus magna consectetur phasellus dapibus sem a a ante mi ut malesuada a parturient tempor pharetra varius porta.\"}},{\"contentTypeAlias\":\"faqItem\",\"createDate\":\"2016-06-20T20:59:55.9799084Z\",\"updateDate\":\"2016-06-20T20:59:55.9799084Z\",\"creatorId\":0,\"writerId\":0,\"key\":\"29cfd41d-a856-4c91-b1e5-d4f613c01751\",\"name\":\"Porta in a adipiscing condimentum?\",\"published\":true,\"properties\":{\"question\":\"Porta in a adipiscing condimentum?\",\"answer\":\"Id scelerisque parturient aliquet congue purus himenaeos parturient dictumst sociis interdum ullamcorper a adipiscing sapien curae adipiscing id nostra laoreet neque ante. Varius venenatis luctus id a adipiscing condimentum adipiscing suspendisse adipiscing cum risus suspendisse natoque suspendisse eget nibh.\"}}]"
     }
   }
-]]]></ribbons>
+]]]></blocks>
   <headline><![CDATA[Frequently asked questions]]></headline>
 </articlePage>
