--- a/samples/Website/uSync/data/DocumentType/pages/article-page/def.config
+++ b/samples/Website/uSync/data/DocumentType/pages/article-page/def.config
@@ -19,6 +19,18 @@
   <Structure />
   <GenericProperties>
     <GenericProperty>
+      <Key>b037748b-4147-4aea-9a61-457aa5500fbc</Key>
+      <Name>Blocks</Name>
+      <Alias>blocks</Alias>
+      <Definition>0e642ec3-7e74-4e3c-8bb9-feb09f59f536</Definition>
+      <Type>DisPlay.Umbraco.EmbeddedContent</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>1</SortOrder>
+      <Tab>Content</Tab>
+    </GenericProperty>
+    <GenericProperty>
       <Key>b7ad4044-9584-40ff-b9ea-6f4e73b6964d</Key>
       <Name>Headline</Name>
       <Alias>headline</Alias>
@@ -28,18 +40,6 @@
       <Validation></Validation>
       <Description><![CDATA[]]></Description>
       <SortOrder>0</SortOrder>
-      <Tab>Content</Tab>
-    </GenericProperty>
-    <GenericProperty>
-      <Key>b037748b-4147-4aea-9a61-457aa5500fbc</Key>
-      <Name>Ribbons</Name>
-      <Alias>ribbons</Alias>
-      <Definition>0e642ec3-7e74-4e3c-8bb9-feb09f59f536</Definition>
-      <Type>DisPlay.Umbraco.EmbeddedContent</Type>
-      <Mandatory>false</Mandatory>
-      <Validation></Validation>
-      <Description><![CDATA[]]></Description>
-      <SortOrder>1</SortOrder>
       <Tab>Content</Tab>
     </GenericProperty>
   </GenericProperties>
