--- a/samples/Website/uSync/data/DocumentType/pages/front-page/def.config
+++ b/samples/Website/uSync/data/DocumentType/pages/front-page/def.config
@@ -20,8 +20,8 @@
   <GenericProperties>
     <GenericProperty>
       <Key>d833b976-a12b-4488-919b-c87fe560767e</Key>
-      <Name>Ribbons</Name>
-      <Alias>ribbons</Alias>
+      <Name>Blocks</Name>
+      <Alias>blocks</Alias>
       <Definition>0e642ec3-7e74-4e3c-8bb9-feb09f59f536</Definition>
       <Type>DisPlay.Umbraco.EmbeddedContent</Type>
       <Mandatory>false</Mandatory>
