--- a/samples/Website/uSync/data/DocumentType/ribbons/faq-ribbon/def.config
+++ b/samples/Website/uSync/data/DocumentType/ribbons/faq-ribbon/def.config
@@ -2,14 +2,14 @@
 <DocumentType>
   <Info>
     <Key>b9bc844c-66a3-411d-9c96-e35a2fcbc596</Key>
-    <Name>Faq rIbbon</Name>
-    <Alias>faqRIbbon</Alias>
+    <Name>Faq block</Name>
+    <Alias>faqBlock</Alias>
     <Icon>icon-wand</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
     <AllowAtRoot>False</AllowAtRoot>
     <IsListView>False</IsListView>
-    <Folder>Ribbons</Folder>
+    <Folder>Blocks</Folder>
     <Compositions />
     <DefaultTemplate></DefaultTemplate>
     <AllowedTemplates />
