--- a/samples/Website/uSync/data/DataType/approved-color/ApprovedColor.config
+++ b/samples/Website/uSync/data/DataType/approved-color/ApprovedColor.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <DataType Name="Approved Color" Key="0225af17-b302-49cb-9176-b9f35cab9c17" Id="Umbraco.ColorPickerAlias" DatabaseType="Nvarchar">
-  <PreValues />
+  <PreValues>
+    <PreValue Id="31" Value="000000" Alias="0" />
+  </PreValues>
 </DataType>
