--- a/samples/Website/uSync/data/DocumentType/blocks/jumbotron-block/def.config
+++ b/samples/Website/uSync/data/DocumentType/blocks/jumbotron-block/def.config
@@ -2,20 +2,32 @@
 <DocumentType>
   <Info>
     <Key>52b6683a-5ac0-4baa-9db4-98491b8a52b1</Key>
-    <Name>Jumbotron ribbon</Name>
-    <Alias>JumbotronRibbon</Alias>
+    <Name>Jumbotron block</Name>
+    <Alias>JumbotronBlock</Alias>
     <Icon>icon-billboard</Icon>
     <Thumbnail>folder.png</Thumbnail>
     <Description></Description>
     <AllowAtRoot>False</AllowAtRoot>
     <IsListView>False</IsListView>
-    <Folder>Ribbons</Folder>
+    <Folder>Blocks</Folder>
     <Compositions />
     <DefaultTemplate></DefaultTemplate>
     <AllowedTemplates />
   </Info>
   <Structure />
   <GenericProperties>
+    <GenericProperty>
+      <Key>f023b6e9-1f85-4739-9c9d-34cd5a3dcc39</Key>
+      <Name>Background</Name>
+      <Alias>background</Alias>
+      <Definition>0225af17-b302-49cb-9176-b9f35cab9c17</Definition>
+      <Type>Umbraco.ColorPickerAlias</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[]]></Description>
+      <SortOrder>0</SortOrder>
+      <Tab>Settings</Tab>
+    </GenericProperty>
     <GenericProperty>
       <Key>6d87c2ae-c127-448e-8327-a38a38391d7e</Key>
       <Name>Headline</Name>
@@ -53,6 +65,18 @@
       <Tab>Content</Tab>
     </GenericProperty>
     <GenericProperty>
+      <Key>d78e9a47-2360-46c8-b1f2-9fd52fd9783b</Key>
+      <Name>My setting</Name>
+      <Alias>mySetting</Alias>
+      <Definition>0cc0eba1-9960-42c9-bf9b-60e150b429ae</Definition>
+      <Type>Umbraco.Textbox</Type>
+      <Mandatory>false</Mandatory>
+      <Validation></Validation>
+      <Description><![CDATA[Custom properties can be "hidden" behind the settings button.]]></Description>
+      <SortOrder>1</SortOrder>
+      <Tab>Settings</Tab>
+    </GenericProperty>
+    <GenericProperty>
       <Key>8cc4dfe6-5055-4642-841b-23649985352c</Key>
       <Name>Text</Name>
       <Alias>text</Alias>
@@ -69,6 +93,10 @@
     <Tab>
       <Caption>Content</Caption>
       <SortOrder>0</SortOrder>
+    </Tab>
+    <Tab>
+      <Caption>Settings</Caption>
+      <SortOrder>1</SortOrder>
     </Tab>
   </Tabs>
 </DocumentType>
