--- a/src/DisPlay.Umbraco.EmbeddedContent.Courier/DisPlay.Umbraco.EmbeddedContent.Courier.csproj
+++ b/src/DisPlay.Umbraco.EmbeddedContent.Courier/DisPlay.Umbraco.EmbeddedContent.Courier.csproj
@@ -2,10 +2,13 @@
     <PropertyGroup>
         <title>Umbraco Embedded Content Courier provider</title>
         <authors>Rasmus John Pedersen</authors>
-        <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>DIS/PLAY Umbraco Embedded Content Courier provider</description>
+        <description>Courier provider for DIS/PLAY Umbraco Embedded Content.</description>
+        <packageLicenseUrl>https://github.com/display/umbraco-embedded-content/raw/develop/LICENSE</packageLicenseUrl>
+        <packageProjectUrl>https://github.com/display/umbraco-embedded-content</packageProjectUrl>
+        <packageTags>umbraco umbracocms property-editor courier</packageTags>
         <copyright>Copyright © DIS/PLAY 2016</copyright>
-        <versionPrefix>0.2.0</versionPrefix>
+        <requireLicenseAcceptance>false</requireLicenseAcceptance>
+        <versionPrefix>0.3.0</versionPrefix>
     </PropertyGroup>
 
     <PropertyGroup>
