--- a/src/DisPlay.Umbraco.EmbeddedContent/DisPlay.Umbraco.EmbeddedContent.csproj
+++ b/src/DisPlay.Umbraco.EmbeddedContent/DisPlay.Umbraco.EmbeddedContent.csproj
@@ -2,10 +2,13 @@
     <PropertyGroup>
         <title>Umbraco Embedded Content</title>
         <authors>Rasmus John Pedersen</authors>
-        <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>DIS/PLAY Umbraco Embedded Content</description>
+        <description>An Umbraco property that uses document types for content blocks.</description>
+        <packageLicenseUrl>https://github.com/display/umbraco-embedded-content/raw/develop/LICENSE</packageLicenseUrl>
+        <packageProjectUrl>https://github.com/display/umbraco-embedded-content</packageProjectUrl>
+        <packageTags>umbraco umbracocms property-editor</packageTags>
         <copyright>Copyright © DIS/PLAY 2016</copyright>
-        <versionPrefix>1.2.2</versionPrefix>
+        <requireLicenseAcceptance>false</requireLicenseAcceptance>
+        <versionPrefix>1.3.0</versionPrefix>
     </PropertyGroup>
 
     <PropertyGroup>
@@ -26,10 +29,8 @@
     </Target>
 
     <ItemGroup>
-        <None Include="build\**" Pack="True" PackagePath="build\" />
         <None Include="tools\**" Pack="True" PackagePath="tools\" />
-        <None Include="contentFiles\**" Pack="True" PackagePath="contentFiles\" />
-        <None Include="$(FrontendRoot)build\**" Exclude="$(FrontendRoot)node_modules\**" Pack="True" PackagePath="contentFiles\App_Plugins\EmbeddedContent\" />
+        <None Include="$(FrontendRoot)dist\**" Exclude="$(FrontendRoot)node_modules\**" Pack="True" PackagePath="content\App_Plugins\EmbeddedContent\" />
     </ItemGroup>
 
 
