--- a/src/DisPlay.Umbraco.EmbeddedContent/ClientApp/package.json
+++ b/src/DisPlay.Umbraco.EmbeddedContent/ClientApp/package.json
@@ -51,6 +51,7 @@
     "html-loader": "^0.5.5",
     "mini-css-extract-plugin": "^0.4.2",
     "nodemon": "^1.18.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^3.0.0",
     "postcss-smart-import": "^0.7.6",
